[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cards/CardBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="FontFile" id=2]
[ext_resource path="res://Assets/cardParts/background shade.png" type="Texture2D" id=3]

[sub_resource type="FontFile" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 2 )

[node name="CardBase" type="MarginContainer"]
offset_right = 205.0
offset_bottom = 250.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CardFront" type="Sprite2D" parent="."]
centered = false

[node name="Border" type="Sprite2D" parent="."]

[node name="TextGrid" type="VBoxContainer" parent="."]
offset_right = 205.0
offset_bottom = 250.0

[node name="TopGap" type="MarginContainer" parent="TextGrid"]
offset_right = 205.0
offset_bottom = 10.0
minimum_size = Vector2( 0, 10 )

[node name="NameCont" type="HBoxContainer" parent="TextGrid"]
offset_top = 14.0
offset_right = 205.0
offset_bottom = 39.0
minimum_size = Vector2( 25, 0 )

[node name="LeftGap" type="MarginContainer" parent="TextGrid/NameCont"]
offset_right = 25.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="NameContainer" type="MarginContainer" parent="TextGrid/NameCont"]
offset_left = 29.0
offset_right = 176.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="TextGrid/NameCont/NameContainer"]
offset_right = 147.0
offset_bottom = 25.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="TextGrid/NameCont/NameContainer"]
offset_right = 147.0
offset_bottom = 25.0

[node name="Name" type="Label" parent="TextGrid/NameCont/NameContainer/CenterContainer"]
offset_left = 35.0
offset_right = 111.0
offset_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "[insert]"

[node name="RightGap" type="MarginContainer" parent="TextGrid/NameCont"]
offset_left = 180.0
offset_right = 205.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="PostName" type="MarginContainer" parent="TextGrid"]
offset_top = 43.0
offset_right = 205.0
offset_bottom = 68.0
minimum_size = Vector2( 0, 25 )

[node name="RedPoolCont" type="HBoxContainer" parent="TextGrid"]
offset_top = 72.0
offset_right = 205.0
offset_bottom = 97.0
minimum_size = Vector2( 25, 0 )

[node name="LeftGap" type="MarginContainer" parent="TextGrid/RedPoolCont"]
offset_right = 25.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="RedPoolContainer" type="MarginContainer" parent="TextGrid/RedPoolCont"]
offset_left = 29.0
offset_right = 176.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="TextGrid/RedPoolCont/RedPoolContainer"]
offset_right = 147.0
offset_bottom = 25.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="TextGrid/RedPoolCont/RedPoolContainer"]
offset_right = 147.0
offset_bottom = 25.0

[node name="RedPool" type="Label" parent="TextGrid/RedPoolCont/RedPoolContainer/CenterContainer"]
offset_left = 35.0
offset_right = 111.0
offset_bottom = 25.0
custom_colors/font_color = Color( 0.941176, 0.470588, 0.470588, 1 )
custom_fonts/font = SubResource( 1 )
text = "[insert]"

[node name="RightGap" type="MarginContainer" parent="TextGrid/RedPoolCont"]
offset_left = 180.0
offset_right = 205.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="GreenPoolCont" type="HBoxContainer" parent="TextGrid"]
offset_top = 101.0
offset_right = 205.0
offset_bottom = 126.0
minimum_size = Vector2( 25, 0 )

[node name="LeftGap" type="MarginContainer" parent="TextGrid/GreenPoolCont"]
offset_right = 25.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="GreenPoolContainer" type="MarginContainer" parent="TextGrid/GreenPoolCont"]
offset_left = 29.0
offset_right = 176.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="TextGrid/GreenPoolCont/GreenPoolContainer"]
offset_right = 147.0
offset_bottom = 25.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="TextGrid/GreenPoolCont/GreenPoolContainer"]
offset_right = 147.0
offset_bottom = 25.0

[node name="GreenPool" type="Label" parent="TextGrid/GreenPoolCont/GreenPoolContainer/CenterContainer"]
offset_left = 35.0
offset_right = 111.0
offset_bottom = 25.0
custom_colors/font_color = Color( 0.470588, 0.941176, 0.470588, 1 )
custom_fonts/font = SubResource( 1 )
text = "[insert]"

[node name="RightGap" type="MarginContainer" parent="TextGrid/GreenPoolCont"]
offset_left = 180.0
offset_right = 205.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="BluePoolCont" type="HBoxContainer" parent="TextGrid"]
offset_top = 130.0
offset_right = 205.0
offset_bottom = 155.0
minimum_size = Vector2( 25, 0 )

[node name="LeftGap" type="MarginContainer" parent="TextGrid/BluePoolCont"]
offset_right = 25.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="BluePoolContainer" type="MarginContainer" parent="TextGrid/BluePoolCont"]
offset_left = 29.0
offset_right = 176.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="TextGrid/BluePoolCont/BluePoolContainer"]
offset_right = 147.0
offset_bottom = 25.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="TextGrid/BluePoolCont/BluePoolContainer"]
offset_right = 147.0
offset_bottom = 25.0

[node name="BluePool" type="Label" parent="TextGrid/BluePoolCont/BluePoolContainer/CenterContainer"]
offset_left = 35.0
offset_right = 111.0
offset_bottom = 25.0
custom_colors/font_color = Color( 0.470588, 0.470588, 0.941176, 1 )
custom_fonts/font = SubResource( 1 )
text = "[insert]"

[node name="RightGap" type="MarginContainer" parent="TextGrid/BluePoolCont"]
offset_left = 180.0
offset_right = 205.0
offset_bottom = 25.0
minimum_size = Vector2( 25, 0 )

[node name="PostPools" type="MarginContainer" parent="TextGrid"]
offset_top = 159.0
offset_right = 205.0
offset_bottom = 184.0
minimum_size = Vector2( 0, 25 )

[node name="DescCont" type="HBoxContainer" parent="TextGrid"]
offset_top = 188.0
offset_right = 205.0
offset_bottom = 236.0
minimum_size = Vector2( 25, 0 )
size_flags_vertical = 3

[node name="LeftGap" type="MarginContainer" parent="TextGrid/DescCont"]
offset_right = 25.0
offset_bottom = 48.0
minimum_size = Vector2( 25, 0 )

[node name="DescContainer" type="MarginContainer" parent="TextGrid/DescCont"]
offset_left = 29.0
offset_right = 176.0
offset_bottom = 48.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="TextGrid/DescCont/DescContainer"]
offset_right = 147.0
offset_bottom = 48.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="TextGrid/DescCont/DescContainer"]
offset_right = 147.0
offset_bottom = 48.0

[node name="Desc" type="Label" parent="TextGrid/DescCont/DescContainer/CenterContainer"]
offset_left = 42.0
offset_top = 14.0
offset_right = 104.0
offset_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "[insert]"

[node name="RightGap" type="MarginContainer" parent="TextGrid/DescCont"]
offset_left = 180.0
offset_right = 205.0
offset_bottom = 48.0
minimum_size = Vector2( 25, 0 )

[node name="BottomGap" type="MarginContainer" parent="TextGrid"]
offset_top = 240.0
offset_right = 205.0
offset_bottom = 250.0
minimum_size = Vector2( 0, 10 )

[node name="CardBack" type="Sprite2D" parent="."]
centered = false

[node name="FocusButton" type="TextureButton" parent="."]
offset_right = 205.0
offset_bottom = 250.0

[connection signal="mouse_entered" from="FocusButton" to="." method="_on_FocusButton_mouse_entered"]
[connection signal="mouse_exited" from="FocusButton" to="." method="_on_FocusButton_mouse_exited"]
